# kairos

./: .env.selfhost.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
apps/api/: .dockerignore  .env.example  config.py  main.py  pyproject.toml  railway.toml  requirements.txt
apps/api/db/: redis_client.py  supabase.py
apps/api/db/migrations/: 0001_initial_schema.sql  0002_hardening.sql  0003_cron_jobs.sql  0004_alerts_cascade.sql
apps/api/models/: eval.py  pipeline.py  trace.py  user.py
apps/api/routers/: agents.py  auth.py  evals.py  ingest.py  pipelines.py
apps/api/scripts/: generate_api_key.py
apps/api/services/: agent_sim.py  alerting.py  eval_service.py  scenario_gen.py  trace_service.py
apps/api/workers/: eval_worker.py
apps/dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json
apps/dashboard/app/: layout.tsx
apps/dashboard/app/(auth)/: layout.tsx
apps/dashboard/app/(dashboard)/: layout.tsx  page.tsx
apps/dashboard/components/: SignOutButton.tsx
apps/dashboard/components/alerts/: AlertList.tsx
apps/dashboard/components/auth/: AuthForm.tsx
apps/dashboard/lib/: api.ts  supabase.ts  types.ts  utils.ts
docs/: concepts.mdx  deploying.mdx  quickstart.mdx  sdk-reference.mdx  self-hosting.mdx
scripts/: capture_demo.py  seed_demo_data.py  validate-selfhost.sh
tests/: edge_cases_test.py  eval_quality_test.py  hardening_test.py  phase_1_test.py  phase_2_test.py  phase_3_test.py  phase_4_test.py
(+23 files in other folders)
