[tool.poetry]
name = "kairos-api"
version = "0.1.0"
description = "Kairos FastAPI backend — RAG observability + agent reliability ingest/eval API"
authors = ["Atharv Puranik"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.6"
supabase = "^2.9"
upstash-redis = "^1.2"
httpx = "^0.27"
python-dotenv = "^1.0"
anthropic = "^0.110"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
